--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/add.css">
+    <link rel="stylesheet" href="css/add.css">
     <title>ADD  </title>
 </head>
 <body>
@@ -37,6 +37,10 @@
             <button id="add-btn" type="button" class="btn btn-dark">Add Expense</button>
         </div>
     </div>
-    <script src="../javascript/add.js"></script>
+    <div class="redirect">
+        <a href="index.html" class="btn btn-outline-danger">HOME</a>
+        <a href="current.html" class="btn btn-outline-dark">CURRENT EXPENDITURES</a>
+    </div>
+    <script src="javascript/add.js"></script>
 </body>
 </html>
