--- a/current.html
+++ b/current.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/current.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/current.css">
     <title>CURRENT LIST OF EXPENDITURES</title>
 </head>
 <body>
@@ -18,6 +19,10 @@
         </tr>
         <tbody id="expense-body"></tbody>
     </table>
-    <script src="../javascript/style.js"></script>
+    <div class="bt">
+        <a href="index.html" class="btn btn-primary">HOME</a>
+        <a href="add.html" class="btn btn-light">Add another Expenditure</a>
+    </div>
+    <script src="javascript/style.js"></script>
 </body>
 </html>
